--- a/Baha'i/AB/SFWAB/Notes.html
+++ b/Baha'i/AB/SFWAB/Notes.html
@@ -36,7 +36,7 @@
        <input type="submit" value="<" name="back">
       </form></td>
      <td>
-      <form action="Cover.html" method="GET">
+      <form action="Contents.html" method="GET">
        <input type="submit" value="^" name="up">
       </form>
       <form action="../../../index.html" method="GET">
@@ -589,7 +589,7 @@
        <input type="submit" value="<" name="back">
       </form></td>
      <td>
-      <form action="Cover.html" method="GET">
+      <form action="Contents.html" method="GET">
        <input type="submit" value="^" name="up">
       </form>
       <form action="../../../index.html" method="GET">
@@ -731,7 +731,7 @@
        <input type="submit" value="<" name="back">
       </form></td>
      <td>
-      <form action="Cover.html" method="GET">
+      <form action="Contents.html" method="GET">
        <input type="submit" value="^" name="up">
       </form>
       <form action="../../../index.html" method="GET">
