--- a/Baha'i/AB/SFWAB/Preface.html
+++ b/Baha'i/AB/SFWAB/Preface.html
@@ -36,7 +36,7 @@
        <input type="submit" value="<" name="back">
       </form></td>
      <td>
-      <form action="Cover.html" method="GET">
+      <form action="Contents.html" method="GET">
        <input type="submit" value="^" name="up">
       </form>
       <form action="../../../index.html" method="GET">
@@ -122,7 +122,7 @@
        <input type="submit" value="<" name="back">
       </form></td>
      <td>
-      <form action="Cover.html" method="GET">
+      <form action="Contents.html" method="GET">
        <input type="submit" value="^" name="up">
       </form>
       <form action="../../../index.html" method="GET">
@@ -264,7 +264,7 @@
        <input type="submit" value="<" name="back">
       </form></td>
      <td>
-      <form action="Cover.html" method="GET">
+      <form action="Contents.html" method="GET">
        <input type="submit" value="^" name="up">
       </form>
       <form action="../../../index.html" method="GET">
