--- a/Baha'i/AB/SFWAB/p001-320.html
+++ b/Baha'i/AB/SFWAB/p001-320.html
@@ -40,7 +40,7 @@ footnote on page 130: 2 See <i>Some Answered Questions</i>, pp. 328–9 for 'Abd
        <input type="submit" value="<" name="back">
       </form></td>
      <td>
-      <form action="Cover.html" method="GET">
+      <form action="Contents.html" method="GET">
        <input type="submit" value="^" name="up">
       </form>
       <form action="../../../index.html" method="GET">
@@ -10735,7 +10735,7 @@ footnote on page 130: 2 See <i>Some Answered Questions</i>, pp. 328–9 for 'Abd
        <input type="submit" value="<" name="back">
       </form></td>
      <td>
-      <form action="Cover.html" method="GET">
+      <form action="Contents.html" method="GET">
        <input type="submit" value="^" name="up">
       </form>
       <form action="../../../index.html" method="GET">
@@ -10877,7 +10877,7 @@ footnote on page 130: 2 See <i>Some Answered Questions</i>, pp. 328–9 for 'Abd
        <input type="submit" value="<" name="back">
       </form></td>
      <td>
-      <form action="Cover.html" method="GET">
+      <form action="Contents.html" method="GET">
        <input type="submit" value="^" name="up">
       </form>
       <form action="../../../index.html" method="GET">
