--- a/Baha'i/UHJ/Messages/Baha'iDatesCalendar.htm
+++ b/Baha'i/UHJ/Messages/Baha'iDatesCalendar.htm
@@ -2,25 +2,27 @@
 
 <head>
 	<title>Covenant Library Bahá'í Dates Calendar</title>
-	
-	
-	<style>
-	div.table-wrapper {
-	border: 1px solid;
-	height: 17em;
-	resize: vertical;
-	overflow: auto;
-	width: 100%;
-	overflow-y: auto;
-	}
- 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-	table thead tr th {
-	position: sticky;
-	top: 0px;
-	background-color: #646;
-	color: #aff;
-	font-weight: normal;
+    	div.table-wrapper {
+    	border: 1px solid;
+    	height: 17em;
+    	resize: vertical;
+    	overflow: auto;
+    	width: 100%;
+    	overflow-y: auto;
+    	}
+
+
+    	table thead tr th {
+    	position: sticky;
+    	top: 0px;
+    	background-color: #646;
+    	color: #aff;
+    	font-weight: normal;
 	}
 
 
@@ -1148,16 +1150,16 @@ The Bahá'í day ends and a new one begins at sunset; consequently, the day on w
 			   <td align="center">2023-24</td>
 		</tr>
 		<tr>
-		       <td><b>10. Hubb</b></td>
-		       <td align="center"><b>Love</b></td>
-			   <td align="center"><b>B.E. 181</b></td>
-			   <td align="center"><b>2024-25</b></td>
+		       <td>10. Hubb</td>
+		       <td align="center">Love</td>
+			   <td align="center">B.E. 181</td>
+			   <td align="center">2024-25</td>
 		</tr>
 		<tr>
-		       <td>11. Bahháj</td>
-		       <td align="center">Delightful</td>
-			   <td align="center">B.E. 182</td>
-			   <td align="center">2025-26</td>			   
+		       <td><b>11. Bahháj</b></td>
+		       <td align="center"><b>Delightful</b></td>
+			   <td align="center"><b>B.E. 182</b></td>
+			   <td align="center"><b>2025-26</b></td>			   
 		</tr>
 		<tr>
 		       <td>12. Javáb</td>
