--- a/Baha'i/AB/SAQ/p175-260Part4.html
+++ b/Baha'i/AB/SAQ/p175-260Part4.html
@@ -8,19 +8,22 @@
 <html>
 <head>
 	<title>Some Answered Questions, Part 4</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-	<style>
-	/* highlighted href*/
-	a.hh:link, a.hh:visited {
-	  background-color: #ffffCF;
-	  color: black;
-	  text-decoration: none;
-	  display: inline-block;
-	  }
+    	/* highlighted href*/
+    	a.hh:link, a.hh:visited {
+    	  background-color: #ffffCF;
+    	  color: black;
+    	  text-decoration: none;
+    	  display: inline-block;
+    	  }
 
-	a.hh:hover, a.hh:active {
-	 text-decoration:underline;
-	 }
+    	a.hh:hover, a.hh:active {
+    	 text-decoration:underline;
+    	 }
 	</style>
 		
 </head>
