--- a/Baha'i/AB/SAQ/p307-324Index.html
+++ b/Baha'i/AB/SAQ/p307-324Index.html
@@ -9,6 +9,11 @@
 <html>
 <head>
 	<title>Some Answered Questions, Index</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>    
 </head>
 
 <body>
