--- a/Baha'i/AB/SAQ/Foreword.html
+++ b/Baha'i/AB/SAQ/Foreword.html
@@ -4,6 +4,11 @@
 <html>
 <head>
 	<title>Some Answered Questions, Foreward</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>    
 </head>
 
 <body>
