--- a/Baha'i/AB/SFWAB/Index.html
+++ b/Baha'i/AB/SFWAB/Index.html
@@ -10,6 +10,11 @@ America / letter from -- changed from 422 to 243 ???? (there is no page 422)
 <html>
 <head>
 	<title>Selections from the Writings of 'Abdu'l-Bahá, Index</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
