--- a/Baha'i/AB/SFWAB/Contents.html
+++ b/Baha'i/AB/SFWAB/Contents.html
@@ -8,8 +8,11 @@
 <html>
 <head>
 	<title>Selections From The Writings of 'Abdu'l-Bahá, Contents</title>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
+     html {font-size: 16px;}
+	 
 .dot-div {
   border-bottom:dotted 2px black;
   width: 100%;
@@ -482,7 +485,6 @@
 	   <td>&nbsp;</td>
        <td>&nbsp;</td>
 </tr>
-
 <tr>
 	   <td>
 	   <div class="dot-div"></div>
