--- a/Baha'i/AB/SFWAB/Cover.html
+++ b/Baha'i/AB/SFWAB/Cover.html
@@ -8,6 +8,11 @@
 <html>
 <head>
 	<title>Selections From The Writings of 'Abdu'l-Bahá, Cover</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
