--- a/Baha'i/Baha/EW/p183-194Glossary.html
+++ b/Baha'i/Baha/EW/p183-194Glossary.html
@@ -9,6 +9,11 @@ SIYYID ASHRAF-I-ZANJÁNÍ - Nazir changed to Básir
 <html>
 <head>
 	<title>Epistle to the Son of the Wolf, Glossary</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
