--- a/Baha'i/Baha/GL/Contents.html
+++ b/Baha'i/Baha/GL/Contents.html
@@ -8,21 +8,24 @@
 <html>
 <head>
 	<title>Gleanings From The Writings Of Bahá'u'lláh, Contents</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-<style>
-.dot-div {
-  border-bottom:dotted 2px black;
-  width: 100%;
-  height: 14px
-}
-.text-div {
-  margin-top: -14px
-}
-.text-span {
-  background: #fff;
-  padding-right: 5px
-}
-</style>
+        .dot-div {
+          border-bottom:dotted 2px black;
+          width: 100%;
+          height: 14px
+        }
+        .text-div {
+          margin-top: -14px
+        }
+        .text-span {
+          background: #fff;
+          padding-right: 5px
+        }
+    </style>
 
 </head>
 
