--- a/Baha'i/Baha/KA/p012-018Desc.html
+++ b/Baha'i/Baha/KA/p012-018Desc.html
@@ -8,6 +8,11 @@ P. 14 - "establishes the Ninetten Day Feasts" - Feasts (not Feast) matches quote
 <html>
 <head>
 	<title>The Kitáb-i-Aqdas, Description</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
