--- a/Baha'i/Baha/KA/p089-102Supp.html
+++ b/Baha'i/Baha/KA/p089-102Supp.html
@@ -10,6 +10,11 @@ Page 99: "turning to any one" - anyone (no space) in PM
 <html>
 <head>
 	<title>The Kitáb-i-Aqdas, Some Supplementary Texts</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
