--- a/Baha'i/Baha/KA/p103-140QA.html
+++ b/Baha'i/Baha/KA/p103-140QA.html
@@ -11,6 +11,11 @@ Q63 - left rak'ahs as in printed version (not rak’áhs)
 <html>
 <head>
 	<title>The Kitáb-i-Aqdas, Questions And Anwsers</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
