--- a/Baha'i/Baha/KA/p258-296Index.html
+++ b/Baha'i/Baha/KA/p258-296Index.html
@@ -25,6 +25,11 @@ Shoghi Effendi, Writings of -- should be Shoghi Effendi, Writings
 <html>
 <head>
 	<title>The Kitáb-i-Aqdas, Index</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
