--- a/Baha'i/Baha/KA/p141-164Synopsis.html
+++ b/Baha'i/Baha/KA/p141-164Synopsis.html
@@ -8,6 +8,11 @@ p153 - left Islamic as in printed version (not Islámic)
 <html>
 <head>
 	<title>The Kitáb-i-Aqdas, A Synopsis And Codification</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
