--- a/Baha'i/Baha/KA/p165-251Notes.html
+++ b/Baha'i/Baha/KA/p165-251Notes.html
@@ -8,6 +8,11 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 <html>
 <head>
 	<title>The Kitáb-i-Aqdas, Notes</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
