--- a/Baha'i/Baha/KA/p255-257Key.html
+++ b/Baha'i/Baha/KA/p255-257Key.html
@@ -10,6 +10,11 @@
 <html>
 <head>
 	<title>The Kitáb-i-Aqdas, Key to Passages</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
