--- a/Baha'i/Baha/KI/p001-094.html
+++ b/Baha'i/Baha/KI/p001-094.html
@@ -8,20 +8,22 @@
 <html>
 <head>
 	<title>The Kitáb-i-Íqán, Part One</title>
-	
-	<style>
-	
-	/* highlighted href*/
-	a.hh:link, a.hh:visited {
-	  background-color: #ffffCF;
-	  color: black;
-	  text-decoration: none;
-	  display: inline-block;
-	  }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-	a.hh:hover, a.hh:active {
-	 text-decoration:underline;
-	 }
+    	/* highlighted href*/
+    	a.hh:link, a.hh:visited {
+    	  background-color: #ffffCF;
+    	  color: black;
+    	  text-decoration: none;
+    	  display: inline-block;
+    	  }
+
+    	a.hh:hover, a.hh:active {
+    	 text-decoration:underline;
+    	 }
 	 
 	</style>	
 </head>
