--- a/Baha'i/Baha/PM/Index.html
+++ b/Baha'i/Baha/PM/Index.html
@@ -10,6 +10,11 @@ Section 182 missing in Daily obligatory prayers
 <html>
 <head>
 	<title>Prayers and Meditations, Index</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
