--- a/Baha'i/Comp/BP/Prologue.html
+++ b/Baha'i/Comp/BP/Prologue.html
@@ -1,157 +1,176 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><!-- Covenant Library: \cl\Baha'i\Comp\BP\Prologue.html --><!-- ISSUES LOG
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!-- Covenant Library: \cl\Baha'i\Comp\BP\Prologue.html -->
+
+<!-- ISSUES LOG
 
 -->
+
 <html>
- <head>
-  <meta charset="utf-8">
-  <title>Bahá'í Prayers - Prologue</title>
-  <style>
-	/* highlighted href
-	<a class="hh" title="" href="#"></a>
-	*/
-	a.hh:link, a.hh:visited {
-	  background-color: #ffffCF;
-	  color: black;
-	  text-decoration: none;
-	  display: inline-block;
-	  }
+<head>
+	<title>Bahá'í Prayers - Prologue</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-	a.hh:hover, a.hh:active {
-	 text-decoration:underline;
-	 }
+    	a.hh:link, a.hh:visited {
+    	  background-color: #ffffCF;
+    	  color: black;
+    	  text-decoration: none;
+    	  display: inline-block;
+    	  }
 
-	a.xpre:link, a.xpre:visited {
-	  background-color: #FFCBC0;
-	  color: black;
-	  text-decoration: underline;
-	  display: inline-block;
-	  }
+    	a.hh:hover, a.hh:active {
+    	 text-decoration:underline;
+    	 }
+
+    	a.xpre:link, a.xpre:visited {
+    	  background-color: #FFCBC0;
+    	  color: black;
+    	  text-decoration: underline;
+    	  display: inline-block;
+    	  }
     </style>
- </head>
- <body>
-  <table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
-   <tbody>
-    <tr>
-     <td>
-      <form action="Cover.html" method="GET">
-       <input type="submit" value="<" name="back">
-      </form></td>
-     <td>
-      <form action="Contents.html" method="GET">
-       <input type="submit" value="^" name="up">
-      </form>
-      <form action="../../../index.html" method="GET">
-       <input type="submit" value="H" name="home">
-      </form></td>
-     <td>
-      <form action="Contents.html" method="GET">
-       <input type="submit" value=">" name="next">
-      </form></td>
-    </tr>
-   </tbody>
-  </table>
-  <table border="1" cellspacing="2" cellpadding="5" bgcolor="" width="100%">
-   <tbody class="LogicalUnit">
-    <tr>
-     <td width="77%"><a name="para1"></a>
-      <center>
-       <table>
-        <tbody>
-         <tr>
-          <td><br>
-           <center>
-            <i> Blessed is the spot,<br>
-              and the house,<br>
-              and the place,<br>
-              and the city,<br>
-              and the <a class="hh" title="The symbolic centre of an individual's spirituality" href="../../../CLUG/UnifiedGlossary.html#Heart">heart</a>,<br>
-              and the mountain,<br>
-              and the refuge,<br>
-              and the cave,<br>
-              and the valley,<br>
-              and the land,<br>
-              and the sea,<br>
-              and the island,<br>
-              and the meadow<br>
-              where mention of <a class="hh" title="The deity. Bahá'ís believe there is only one God, unknowable in His essence, who is the creator and absolute ruler of the universe" href="../../../CLUG/UnifiedGlossary.html#God">God</a> hath been made,<br>
-              and His praise glorified.<br></i>
-           </center><i><br>
-            <div align="right">
-             -<a class="hh" title="Bahá'u'lláh (The Glory of God), founder of the Bahá'í Faith, ''The Supreme Manifestation of God and the Dayspring of His Most Divine Essence.''  ''...never to be identified with that invisible Reality, the Essence of Divinity itself,'' He is ''the complete incarnation of the names and attributes of God.'' The Promised One of all the ages. Born Tihrán, Persia, Nov. 12, 1817*; ascended Bahjí, Palestine, now Israel, May 29, 1892" href="../../../CLUG/UnifiedGlossary.html#Bahá'u'lláh">BAHÁ'U'LLÁH</a>
-            </div></i><br></td>
-         </tr>
-        </tbody>
-       </table>
-      </center></td>
-     <td valign="top" width="20%"><small>
-       <hr><i>The Revelation Of Baha'u'llah</i>, vol.4 <a href="../../Others/ROB/V4/p315-328Ch21.html#p316">p. 316</a></small>
-      <p><small> Audio: <a href="https://drive.google.com/file/d/0B6cYw5IwKTYsV2Mxd09QUENYYTQ/edit?usp=sharing">Blessed is the Spot</a> (in Arabic). See <a href="../../../download.html">Download Center</a>. </small></p></td>
-    </tr>
-   </tbody>
-   <tbody class="LogicalUnit">
-    <tr>
-     <td><a name="para2"></a>
-      <center>
-       <table>
-        <tbody>
-         <tr>
-          <td><br><i> Intone, O My servant, the verses of <a class="hh" title="The deity. Bahá'ís believe there is only one God, unknowable in His essence, who is the creator and absolute ruler of the universe" href="../../../CLUG/UnifiedGlossary.html#God">God</a><br>
-             &nbsp;&nbsp;&nbsp;that have been received by thee,<br>
-             as intoned by them who have drawn<br>
-             &nbsp;&nbsp;&nbsp;nigh unto Him,<br>
-             that the sweetness of thy melody<br>
-             &nbsp;&nbsp;&nbsp;may kindle thine own <a class="hh" title="The inner and essential reality of man which is not composed of physical matter and thus continues to exist after death" href="../../../CLUG/UnifiedGlossary.html#Soul">soul</a>,<br>
-             and attract the <a class="hh" title="The symbolic centre of an individual's spirituality" href="../../../CLUG/UnifiedGlossary.html#Heart">heart</a>s of all men.<br>
-             &nbsp;&nbsp;&nbsp;Whoso reciteth, in the privacy of his chamber,<br>
-             the verses <a class="hh" title="The Unveiling by God of the laws, teachings or message transmitted through His Manifestations to mankind which hitherto He had hidden from them" href="../../../CLUG/UnifiedGlossary.html#Revelation">revealed</a> by God,<br>
-             &nbsp;&nbsp;&nbsp;the scattering angels of the Almighty<br>
-             shall scatter abroad the fragrance<br>
-             &nbsp;&nbsp;&nbsp;of the words uttered by his mouth,<br>
-             and shall cause the heart<br>
-             &nbsp;&nbsp;&nbsp;of every righteous man to throb.<br>
-             Though he may, at first, remain unaware<br>
-             &nbsp;&nbsp;&nbsp;of its effect, yet the virtue<br>
-             of the grace vouchsafed unto him<br>
-             &nbsp;&nbsp;&nbsp;must needs sooner or later exercise<br>
-             its influence upon his soul.<br>
-             &nbsp;&nbsp;&nbsp;Thus have the mysteries of the <a class="hh" title="The writings of Bahá'u'lláh and His recorded sayings. May also refer to the Bahá'í Faith and the Dispensation of Bahá'u'lláh" href="../../../CLUG/UnifiedGlossary.html#RevelationofBahá'u'lláh">Revelation</a><br>
-             of God been decreed<br>
-             &nbsp;&nbsp;&nbsp;by virtue of the Will of Him<br>
-             Who is the Source of power and <a class="hh" title="Knowledge; the ability to discern inner qualities and relationships, insight; good judgement. Bahá'u'lláh writes: 'Above all else, the greatest gift and the most wondrous blessing hath ever been and will continue to be wisdom'" href="../../../CLUG/UnifiedGlossary.html#Wisdom">wisdom</a>.<br><br>
-            <div align="right">
-             -<a class="hh" title="Bahá'u'lláh (The Glory of God), founder of the Bahá'í Faith, ''The Supreme Manifestation of God and the Dayspring of His Most Divine Essence.''  ''...never to be identified with that invisible Reality, the Essence of Divinity itself,'' He is ''the complete incarnation of the names and attributes of God.'' The Promised One of all the ages. Born Tihrán, Persia, Nov. 12, 1817*; ascended Bahjí, Palestine, now Israel, May 29, 1892" href="../../../CLUG/UnifiedGlossary.html#Bahá'u'lláh">BAHÁ'U'LLÁH</a>
-            </div><br></i></td>
-         </tr>
-        </tbody>
-       </table>
-      </center></td>
-     <td valign="top"><small>
-       <hr><i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../Baha/GL/p003-346.html#para607">p. 295</a>
-       <p>[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Lawh-i-Khalíl">Lawh-i-Khalíl</a>]</p></small>
-      <p><small> </small></p></td>
-    </tr>
-   </tbody>
-  </table>
-  <table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
-   <tbody>
-    <tr>
-     <td>
-      <form action="Cover.html" method="GET">
-       <input type="submit" value="<" name="back">
-      </form></td>
-     <td>
-      <form action="Contents.html" method="GET">
-       <input type="submit" value="^" name="up">
-      </form>
-      <form action="../../../index.html" method="GET">
-       <input type="submit" value="H" name="home">
-      </form></td>
-     <td>
-      <form action="Contents.html" method="GET">
-       <input type="submit" value=">" name="next">
-      </form></td>
-    </tr>
-   </tbody>
-  </table>
- </body>
+
+</head>
+
+<body>
+
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+   <td>
+   <FORM ACTION="Cover.html" METHOD=GET>
+   <INPUT TYPE=submit VALUE="<" NAME=back>
+   </FORM>
+   </td>
+   <td>
+   <FORM ACTION="Contents.html" METHOD=GET>
+   <INPUT TYPE=submit VALUE="^" NAME=up>
+   </FORM>
+   <FORM ACTION="../../../index.html" METHOD=GET>
+   <INPUT TYPE=submit VALUE="H" NAME=home>
+   </FORM>
+   </td>
+   <td>
+   <FORM ACTION="Contents.html" METHOD=GET>
+   <INPUT TYPE=submit VALUE=">" NAME=next>
+   </FORM>
+   </td>
+</tr>
+</table>
+
+<table border="1" cellspacing="2" cellpadding="5" bgcolor="" width="100%">
+
+
+<tr>
+	<td width="77%"><a name="para1"/>
+	<center>
+	<table><tr><td>
+	<br><center><i>
+	Blessed is the spot,<br>
+	and the house,<br>
+	and the place,<br>
+	and the city,<br>
+	and the <a class="hh" title="The symbolic centre of an individual's spirituality" href="../../../CLUG/UnifiedGlossary.html#Heart">heart</a>,<br>
+	and the mountain,<br>
+	and the refuge,<br>
+	and the cave,<br>
+	and the valley,<br>
+	and the land,<br>
+	and the sea,<br>
+	and the island,<br> 
+	and the meadow<br>
+	where mention of <a class="hh" title="The deity. Bahá'ís believe there is only one God, unknowable in His essence, who is the creator and absolute ruler of the universe" href="../../../CLUG/UnifiedGlossary.html#God">God</a> hath been made,<br>
+	and His praise glorified.<br>
+	</center><br>
+	<div align="right">-<a class="hh" title="Bahá'u'lláh (The Glory of God), founder of the Bahá'í Faith, ''The Supreme Manifestation of God and the Dayspring of His Most Divine Essence.''  ''...never to be identified with that invisible Reality, the Essence of Divinity itself,'' He is ''the complete incarnation of the names and attributes of God.'' The Promised One of all the ages. Born Tihrán, Persia, Nov. 12, 1817*; ascended Bahjí, Palestine, now Israel, May 29, 1892" href="../../../CLUG/UnifiedGlossary.html#Bahá'u'lláh">BAHÁ'U'LLÁH</a></div></i><br>
+	</td>
+	</tr></table>
+	</center?
+
+	
+	</td>
+	<td VALIGN=top width="20%"><small>
+	<hr>
+	<i>The Revelation Of Baha'u'llah</i>, vol.4 <a href="../../Others/ROB/V4/p315-328Ch21.html#p316">p. 316</a><p>
+	Audio: <a href="https://drive.google.com/file/d/0B6cYw5IwKTYsV2Mxd09QUENYYTQ/edit?usp=sharing">Blessed is the Spot</a> (in Arabic). See <a href="../../../download.html">Download Center</a>.
+	</small>
+	
+	</td>
+</tr>
+
+
+
+<tr>
+	<td><a name="para2"></a>
+	<center>
+	<table><tr><td>
+	<br><i>
+	Intone, O My servant, the verses of <a class="hh" title="The deity. Bahá'ís believe there is only one God, unknowable in His essence, who is the creator and absolute ruler of the universe" href="../../../CLUG/UnifiedGlossary.html#God">God</a><br>
+	&nbsp;&nbsp;&nbsp;that have been received by thee,<br>
+	as intoned by them who have drawn<br> 
+	&nbsp;&nbsp;&nbsp;nigh unto Him,<br>
+	that the sweetness of thy melody<br> 
+	&nbsp;&nbsp;&nbsp;may kindle thine own <a class="hh" title="The inner and essential reality of man which is not composed of physical matter and thus continues to exist after death" href="../../../CLUG/UnifiedGlossary.html#Soul">soul</a>,<br>
+	and attract the <a class="hh" title="The symbolic centre of an individual's spirituality" href="../../../CLUG/UnifiedGlossary.html#Heart">heart</a>s of all men.<br>
+	&nbsp;&nbsp;&nbsp;Whoso reciteth, in the privacy of his chamber,<br> 
+	the verses <a class="hh" title="The Unveiling by God of the laws, teachings or message transmitted through His Manifestations to mankind which hitherto He had hidden from them" href="../../../CLUG/UnifiedGlossary.html#Revelation">revealed</a> by God,<br>
+	&nbsp;&nbsp;&nbsp;the scattering angels of the Almighty<br> 
+	shall scatter abroad the fragrance<br> 
+	&nbsp;&nbsp;&nbsp;of the words uttered by his mouth,<br>
+	and shall cause the heart<br> 
+	&nbsp;&nbsp;&nbsp;of every righteous man to throb.<br>
+	Though he may, at first, remain unaware<br> 
+	&nbsp;&nbsp;&nbsp;of its effect, yet the virtue<br>
+	of the grace vouchsafed unto him<br> 
+	&nbsp;&nbsp;&nbsp;must needs sooner or later exercise<br>
+	its influence upon his soul.<br>
+	&nbsp;&nbsp;&nbsp;Thus have the mysteries of the <a class="hh" title="The writings of Bahá'u'lláh and His recorded sayings. May also refer to the Bahá'í Faith and the Dispensation of Bahá'u'lláh" href="../../../CLUG/UnifiedGlossary.html#RevelationofBahá'u'lláh">Revelation</a><br>
+	of God been decreed<br>
+	&nbsp;&nbsp;&nbsp;by virtue of the Will of Him<br> 
+	Who is the Source of power and <a class="hh" title="Knowledge; the ability to discern inner qualities and relationships, insight; good judgement. Bahá'u'lláh writes: 'Above all else, the greatest gift and the most wondrous blessing hath ever been and will continue to be wisdom'" href="../../../CLUG/UnifiedGlossary.html#Wisdom">wisdom</a>.<br><br>
+	<div align="right">-<a class="hh" title="Bahá'u'lláh (The Glory of God), founder of the Bahá'í Faith, ''The Supreme Manifestation of God and the Dayspring of His Most Divine Essence.''  ''...never to be identified with that invisible Reality, the Essence of Divinity itself,'' He is ''the complete incarnation of the names and attributes of God.'' The Promised One of all the ages. Born Tihrán, Persia, Nov. 12, 1817*; ascended Bahjí, Palestine, now Israel, May 29, 1892" href="../../../CLUG/UnifiedGlossary.html#Bahá'u'lláh">BAHÁ'U'LLÁH</a></div><br>
+	</i>
+	</td>
+	</tr></table>
+	</center?
+
+	</td>
+	<td VALIGN=top><small>
+	<hr>
+	<i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../Baha/GL/p003-346.html#para607">p. 295</a><p>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#Lawh-i-Khalíl">Lawh-i-Khalíl</a>]<p>
+	</small>
+	
+	</td>
+
+</tr>
+
+</table>
+
+<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
+<tr>
+   <td>
+   <FORM ACTION="Cover.html" METHOD=GET>
+   <INPUT TYPE=submit VALUE="<" NAME=back>
+   </FORM>
+   </td>
+   <td>
+   <FORM ACTION="Contents.html" METHOD=GET>
+   <INPUT TYPE=submit VALUE="^" NAME=up>
+   </FORM>
+   <FORM ACTION="../../../index.html" METHOD=GET>
+   <INPUT TYPE=submit VALUE="H" NAME=home>
+   </FORM>
+   </td>
+   <td>
+   <FORM ACTION="Contents.html" METHOD=GET>
+   <INPUT TYPE=submit VALUE=">" NAME=next>
+   </FORM>
+   </td>
+</tr>
+</table>
+
+</body>
 </html>
+
