--- a/Baha'i/Comp/BP/IndexFirstLine.html
+++ b/Baha'i/Comp/BP/IndexFirstLine.html
@@ -7,7 +7,12 @@
 
 <html>
 <head>
-<title>Bahá'í Prayers - Alphabetical Index</title>
+    <title>Bahá'í Prayers - Alphabetical Index</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
