--- a/Baha'i/Others/DBNN/p109-122Ch05-footnotes.html
+++ b/Baha'i/Others/DBNN/p109-122Ch05-footnotes.html
@@ -7,8 +7,11 @@
 <html>
 <head>
 	<title>The Dawn-Breakers, Chapter 5 Footnotes</title>
-		
-	<style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+
 		tr.hideRowWithNoFootnotes {
 			visibility:collapse;
 			
