--- a/Baha'i/Others/DBNN/Contents.html
+++ b/Baha'i/Others/DBNN/Contents.html
@@ -9,21 +9,24 @@ changed Kalantar to Kalántar
 <html>
 <head>
 	<title>The Dawn-Breakers, Contents</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-<style>
-.dot-div {
-  border-bottom:dotted 2px black;
-  width: 100%;
-  height: 14px
-}
-.text-div {
-  margin-top: -14px
-}
-.text-span {
-  background: #fff;
-  padding-right: 5px
-}
-</style>
+        .dot-div {
+          border-bottom:dotted 2px black;
+          width: 100%;
+          height: 14px
+        }
+        .text-div {
+          margin-top: -14px
+        }
+        .text-span {
+          background: #fff;
+          padding-right: 5px
+        }
+    </style>
 
 </head>
 
