--- a/Baha'i/Others/DBNN/Introduction.html
+++ b/Baha'i/Others/DBNN/Introduction.html
@@ -9,8 +9,11 @@ para70 - "in thine heart" should be "in thy heart" to match quote from Iqan
 <html>
 <head>
 	<title>The Dawn-Breakers, Introduction</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-	<style>
 		div.scrollable {
     		width: 100%;
     		height: 100%;
