--- a/Baha'i/Others/DBNN/p123-128Ch06-footnotes.html
+++ b/Baha'i/Others/DBNN/p123-128Ch06-footnotes.html
@@ -8,8 +8,11 @@
 <html>
 <head>
 	<title>The Dawn-Breakers, Chapter 6 Footnotes</title>
-	
-		<style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+
 		tr.hideRowWithNoFootnotes {
 			visibility:collapse;
 			
