--- a/Baha'i/Others/DBNN/p129-141Ch07-footnotes.html
+++ b/Baha'i/Others/DBNN/p129-141Ch07-footnotes.html
@@ -7,9 +7,11 @@
 <html>
 <head>
 	<title>The Dawn-Breakers, Chapter 7 Footnotes</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-
-	<style>
 		tr.hideRowWithNoFootnotes {
 			visibility:collapse;
 			
