--- a/Baha'i/Others/DBNN/p243-260Ch13-footnotes.html
+++ b/Baha'i/Others/DBNN/p243-260Ch13-footnotes.html
@@ -9,8 +9,11 @@ Footnote #8, change page number for EttSotW from 129 to 174
 <html>
 <head>
 	<title>The Dawn-Breakers, Chapter 13 Footnotes</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-	<style>
 		tr.hideRowWithNoFootnotes {
 			visibility:collapse;
 			
