--- a/Baha'i/Others/DBNN/p268-287Ch15-footnotes.html
+++ b/Baha'i/Others/DBNN/p268-287Ch15-footnotes.html
@@ -6,9 +6,12 @@
 
 <html>
 <head>
-	<title>The Dawn-Breakers, Chapter 15< Footnotes</title>
+	<title>The Dawn-Breakers, Chapter 15 Footnotes</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-	<style>
 		tr.hideRowWithNoFootnotes {
 			visibility:collapse;
 			
