--- a/Baha'i/Others/DBNN/p301-308Ch17.html
+++ b/Baha'i/Others/DBNN/p301-308Ch17.html
@@ -8,8 +8,11 @@ Man-Yuzhiruhu'llah changed to Man-Yuzhiruh'lláh (to match glossary)
 <html>
 <head>
 	<title>The Dawn-Breakers, Chapter 17</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-	<style>
 		div.scrollable {
     		width: 100%;
     		height: 100%;
