--- a/Baha'i/Others/DBNN/p324-377Ch19-footnotes.html
+++ b/Baha'i/Others/DBNN/p324-377Ch19-footnotes.html
@@ -8,8 +8,11 @@ footnote 53, changed page number in EttSotW from 57 to 77
 <html>
 <head>
 	<title>The Dawn-Breakers, Chapter 19 Footnotes</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-	<style>
 		tr.hideRowWithNoFootnotes {
 			visibility:collapse;
 			
