--- a/Baha'i/Others/DBNN/p378-429Ch20.html
+++ b/Baha'i/Others/DBNN/p378-429Ch20.html
@@ -10,8 +10,11 @@ footnote 40 - changed The "Kitáb-i-Íqán," pp. 189-91 to 224-6.
 <html>
 <head>
 	<title>The Dawn-Breakers, Chapter 20</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-	<style>
 		div.scrollable {
     		width: 100%;
     		height: 100%;
