--- a/Baha'i/Others/DBNN/p430-464Ch21.html
+++ b/Baha'i/Others/DBNN/p430-464Ch21.html
@@ -8,8 +8,11 @@ footnote #10, page number in EttSotW changed from 125 to 168
 <html>
 <head>
 	<title>The Dawn-Breakers, Chapter 21</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-	<style>
 		div.scrollable {
     		width: 100%;
     		height: 100%;
