--- a/Baha'i/Others/DBNN/p465-499Ch22.html
+++ b/Baha'i/Others/DBNN/p465-499Ch22.html
@@ -8,8 +8,11 @@ footnote #28 - The "Kitáb-i-Íqán," p. 188 changed to p. 223
 <html>
 <head>
 	<title>The Dawn-Breakers, Chapter 22</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-	<style>
 		div.scrollable {
     		width: 100%;
     		height: 100%;
