--- a/Baha'i/Others/DBNN/p500-526Ch23-footnotes.html
+++ b/Baha'i/Others/DBNN/p500-526Ch23-footnotes.html
@@ -8,8 +8,11 @@ Footnote #18 - changed  "Some Answered Questions," pp. 30–31 to pp. 25-26
 <html>
 <head>
 	<title>The Dawn-Breakers, Chapter 23 Footnotes</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-	<style>
 		tr.hideRowWithNoFootnotes {
 			visibility:collapse;
 			
