--- a/Baha'i/Others/DBNN/p527-581Ch24.html
+++ b/Baha'i/Others/DBNN/p527-581Ch24.html
@@ -7,8 +7,11 @@
 <html>
 <head>
 	<title>The Dawn-Breakers, Chapter 24</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-	<style>
 		div.scrollable {
     		width: 100%;
     		height: 100%;
