--- a/Baha'i/Others/DBNN/p651-668Epilogue.html
+++ b/Baha'i/Others/DBNN/p651-668Epilogue.html
@@ -9,8 +9,11 @@ footnote #9 - first part does not seem to match the book.
 <html>
 <head>
 	<title>The Dawn-Breakers, Epilogue</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-	<style>
 		div.scrollable {
     		width: 100%;
     		height: 100%;
