--- a/Baha'i/Others/DBNN/p679-685Index.html
+++ b/Baha'i/Others/DBNN/p679-685Index.html
@@ -8,6 +8,11 @@ massacre of Qavín to: massacre of Qazvín
 <html>
 <head>
 	<title>The Dawn-Breakers, Index</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
