--- a/Baha'i/Others/ROB/V1/Cover.html
+++ b/Baha'i/Others/ROB/V1/Cover.html
@@ -83,6 +83,11 @@ Vol 1
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 1, Cover</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
