--- a/Baha'i/Others/ROB/V2/p291-300Ch14.html
+++ b/Baha'i/Others/ROB/V2/p291-300Ch14.html
@@ -10,6 +10,11 @@ P. 293...quote from God Passes By...combined two paragrash so they match the tex
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 2, Chapter 14</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
