--- a/Baha'i/Others/ROB/V2/p427-437Apndx_II.html
+++ b/Baha'i/Others/ROB/V2/p427-437Apndx_II.html
@@ -4,21 +4,24 @@
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 2, Appendix II</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
 
-	<style>
-	/* highlighted href
-	<a class="hh" title="" href="#"></a>
-	*/
-	a.hh:link, a.hh:visited {
-	  background-color: #ffffCF;
-	  color: black;
-	  text-decoration: none;
-	  display: inline-block;
-	  }
+    	/* highlighted href
+    	<a class="hh" title="" href="#"></a>
+    	*/
+    	a.hh:link, a.hh:visited {
+    	  background-color: #ffffCF;
+    	  color: black;
+    	  text-decoration: none;
+    	  display: inline-block;
+    	  }
 
-	a.hh:hover, a.hh:active {
-	 text-decoration:underline;
-	 }
+    	a.hh:hover, a.hh:active {
+    	 text-decoration:underline;
+    	 }
 	 
 	</style>
 </head>
