--- a/Baha'i/Others/ROB/V2/Cover.html
+++ b/Baha'i/Others/ROB/V2/Cover.html
@@ -23,6 +23,11 @@ Vol 2
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 2, Cover</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
