--- a/Baha'i/Others/ROB/V2/p065-106Ch04.html
+++ b/Baha'i/Others/ROB/V2/p065-106Ch04.html
@@ -10,6 +10,11 @@ P. 97, replaced Gleanings reference from clxiii to CLXIV
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 2, Chapter 4</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
