--- a/Baha'i/Others/ROB/V2/p236-269Ch11.html
+++ b/Baha'i/Others/ROB/V2/p236-269Ch11.html
@@ -7,6 +7,11 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 2, Chapter 11</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
