--- a/Baha'i/Others/ROB/V2/p337-369Ch16.html
+++ b/Baha'i/Others/ROB/V2/p337-369Ch16.html
@@ -9,6 +9,11 @@
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 2, Chapter 16</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
