--- a/Baha'i/Others/ROB/V3/p253-274Ch12.html
+++ b/Baha'i/Others/ROB/V3/p253-274Ch12.html
@@ -10,6 +10,11 @@ changed Mullá Sádiq-Khurásání to Mullá Sádiq-i-Khurásání to match The 
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 3, Chapter 12</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
