--- a/Baha'i/Others/ROB/V3/Cover.html
+++ b/Baha'i/Others/ROB/V3/Cover.html
@@ -32,6 +32,11 @@ Vol 3
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 3, Cover</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
