--- a/Baha'i/Others/ROB/V3/p001-031Ch01.html
+++ b/Baha'i/Others/ROB/V3/p001-031Ch01.html
@@ -9,6 +9,11 @@ p. 16	   added paragraph separator in God Passes By quote to match the book itse
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 3, Chapter 1</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
