--- a/Baha'i/Others/ROB/V3/p275-307Ch13.html
+++ b/Baha'i/Others/ROB/V3/p275-307Ch13.html
@@ -7,6 +7,11 @@ p. 276 footnote, changed CLXV to CLXVI.
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 3, Chapter 13</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
