--- a/Baha'i/Others/ROB/V3/p322-342Ch15.html
+++ b/Baha'i/Others/ROB/V3/p322-342Ch15.html
@@ -8,6 +8,11 @@
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 3, Chapter 15</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
