--- a/Baha'i/Others/ROB/V4/Cover.html
+++ b/Baha'i/Others/ROB/V4/Cover.html
@@ -29,6 +29,11 @@ Vol 4
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 4, Cover</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
