--- a/Baha'i/Others/ROB/V4/p011-032Ch02.html
+++ b/Baha'i/Others/ROB/V4/p011-032Ch02.html
@@ -4,6 +4,11 @@
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 4, Chapter 2</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
