--- a/Baha'i/Others/ROB/V4/p205-213Ch14.html
+++ b/Baha'i/Others/ROB/V4/p205-213Ch14.html
@@ -8,6 +8,11 @@ p. 209 - changed "but for whom God" to "But for him, God"
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 4, Chapter 14</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
