--- a/Baha'i/SE/GPB/p087-234SecondPeriod.html
+++ b/Baha'i/SE/GPB/p087-234SecondPeriod.html
@@ -9,6 +9,11 @@ para69 Quote from Iqan "From My eyes", Iqan has "From Our eyes"
 <html>
 <head>
 	<title>God Passes By, Second Period</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
