--- a/Baha'i/SE/GPB/Cover.html
+++ b/Baha'i/SE/GPB/Cover.html
@@ -8,6 +8,11 @@
 <html>
 <head>
 	<title>God Passes By</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
