--- a/Baha'i/SE/GPB/p413-436Index.html
+++ b/Baha'i/SE/GPB/p413-436Index.html
@@ -8,6 +8,11 @@ Qayyúmu'l-Asmá' - added all pages with references
 <html>
 <head>
 	<title>God Passes By, Index</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body>
