--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 
 <html>
 <head>
-	<meta name="verify-v1" content="gBRCdhVV4WBnjm4FkbPUOnkkYDtEXWjRzJl9cdASL34=" />
-	<title>The Covenant Library</title>
+    <meta name="verify-v1" content="gBRCdhVV4WBnjm4FkbPUOnkkYDtEXWjRzJl9cdASL34=" />
+    <title>The Covenant Library</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        /* because mobile browsers are lame*/
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body BACKGROUND=BK1a.jpg>
