--- a/search.html
+++ b/search.html
@@ -3,6 +3,11 @@
 <html>
 <head>
 	<title>The Covenant Library - Search</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body BACKGROUND=BK5.JPG>
