--- a/download.html
+++ b/download.html
@@ -2,7 +2,12 @@
 
 <html>
 <head>
-	<title>The Covenant Library</title>
+	<title>The Covenant Library - Download</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body BACKGROUND=BK4.JPG>
