--- a/download.html
+++ b/download.html
@@ -25,12 +25,12 @@ Right click on each file and download to your computer.<br>
 <br><br>
 
 <center><h3><b>Love of Bahá</b></h3>
-<table>
+<table border='0'>
 <tr>
-	<td><img src="Downloads/LOB-I/Cover.JPG" width="174" height="286" alt="" border="0">
+	<td><img src="Downloads/LOB-I/LOB-I_Cover.JPG" width="174" height="286" alt="" border="0">
 	</td>
 	<td><blockquote>
-	<a href="Downloads/LOB-I/Cover.JPG">Cover.JPG</a><br>
+	<!--<a href="Downloads/LOB-I/Cover.JPG">Cover.JPG</a><br>
 	<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsVDZhNkdYOTBiUTA/edit?usp=sharing">01-Prayer-Meetings.mp3</a><br>
 	<a href="https://drive.google.com/file/d/0B6cYw5IwKTYseGlaeDJBUUtVN3M/edit?usp=sharing">02-Prayer-ForTheDeparted.mp3</a><br>
 	<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsMlFzQVlVTEdOU1U/edit?usp=sharing">03-Prayer-Baha'u'llah'sAscension.mp3</a><br>
@@ -42,7 +42,21 @@ Right click on each file and download to your computer.<br>
 	<a href="https://drive.google.com/file/d/0B6cYw5IwKTYscUpLZnFiQTdsRDA/edit?usp=sharing">09-Interlude-Tombak&Violin.mp3</a><br>
 	<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsUm5nZk1yUlpwMkE/edit?usp=sharing">10-Song-MyRestlessHeart.mp3</a><br>
 	<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsOWNoQ0piQ2FtSGs/edit?usp=sharing">11-Song-RizvanSong.mp3</a><br>
-	<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsc1d1VU0xTXZVb0E/edit?usp=sharing">12-Song-AeyBaha.mp3</a><br>
+	<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsc1d1VU0xTXZVb0E/edit?usp=sharing">12-Song-AeyBaha.mp3</a><br>-->
+
+	<a href="Downloads/LOB-I/LOB-I_Cover.JPG">Cover.JPG</a><br>
+	<a href="Downloads/LOB-I/LOB-I_01-Prayer-Meetings.mp3">01-Prayer-Meetings.mp3</a><br>
+	<a href="Downloads/LOB-I/LOB-I_02-Prayer-ForTheDeparted.mp3">02-Prayer-ForTheDeparted.mp3</a><br>
+	<a href="Downloads/LOB-I/LOB-I_03-Prayer-Baha'u'llah'sAscension.mp3">03-Prayer-Baha'u'llah'sAscension.mp3</a><br>
+	<a href="Downloads/LOB-I/LOB-I_04-Prayer-Meetings.mp3">04-Prayer-Meetings.mp3</a><br>
+	<a href="Downloads/LOB-I/LOB-I_05-Prayer-Meetings.mp3">05-Prayer-Meetings.mp3</a><br>
+	<a href="Downloads/LOB-I/LOB-I_06-Prayer-Meetings.mp3">06-Prayer-Meetings.mp3</a><br>
+	<a href="Downloads/LOB-I/LOB-I_07-Song-LoveOfBaha.mp3">07-Song-LoveOfBaha.mp3</a><br>
+	<a href="Downloads/LOB-I/LOB-I_08-Interlude-Santour.mp3">08-Interlude-Santour.mp3</a><br>
+	<a href="Downloads/LOB-I/LOB-I_09-Interlude-Tombak&Violin.mp3">09-Interlude-Tombak&Violin.mp3</a><br>
+	<a href="Downloads/LOB-I/LOB-I_10-Song-MyRestlessHeart.mp3">10-Song-MyRestlessHeart.mp3</a><br>
+	<a href="Downloads/LOB-I/LOB-I_11-Song-RizvanSong.mp3">11-Song-RizvanSong.mp3</a><br>
+	<a href="Downloads/LOB-I/LOB-I_12-Song-AeyBaha.mp3">12-Song-AeyBaha.mp3</a><br>
 	</blockquote></td>
 </tr>
 </table>
@@ -51,12 +65,12 @@ Right click on each file and download to your computer.<br>
 <br><br>
 
 <center><h3><b>Love of Bahá II</b></h3>
-<table>
+<table border='0'>
 <tr>
-	<td><img src="Downloads/LOB-II/Cover.JPG" width="200" height="200" alt="" border="0">
+	<td><img src="Downloads/LOB-II/LOB-II_Cover.JPG" width="200" height="200" alt="" border="0">
 	</td>
 	<td><blockquote>
-	<a href="Downloads/LOB-II/Cover.JPG">Cover.JPG</a><br>
+	<!--<a href="Downloads/LOB-II/Cover.JPG">Cover.JPG</a><br>
 	<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsYlVQd0c2YWJEWTg/edit?usp=sharing">01-Prayer.mp3</a><br>
 	<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsQkFKcGpvekFKczQ/edit?usp=sharing">02-Song-ZemzemehiAsErfun.mp3</a><br>
 	<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsTzktTUs2RENZaEU/edit?usp=sharing">03-Song-NareyehEshghe.mp3</a><br>
@@ -67,7 +81,20 @@ Right click on each file and download to your computer.<br>
 	<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsNmU1a0R6V0VYc1E/edit?usp=sharing">08-HiddenWordsPersian28.mp3</a>&nbsp;&nbsp; <a href="Baha'i/Baha/HiddenWords.html#persian28"><b>(View)</b></a><br>
 	<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsdVhENUJvVzNoNHc/edit?usp=sharing">09-Prayer.mp3</a><br>
 	<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsa0lDbWlJMUJKaTg/edit?usp=sharing">10-Prayer.mp3</a><br>
-	<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsYk42ejlCcUZrUFE/edit?usp=sharing">11-Prayer-BidarSho.mp3</a><br>
+	<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsYk42ejlCcUZrUFE/edit?usp=sharing">11-Prayer-BidarSho.mp3</a><br>-->
+
+    <a href="Downloads/LOB-II/LOB-II_Cover.JPG">Cover.JPG</a><br>
+	<a href="Downloads/LOB-II/LOB-II_01-Prayer.mp3">01-Prayer.mp3</a><br>
+	<a href="Downloads/LOB-II/LOB-II_02-Song-ZemzemehiAsErfun.mp3">02-Song-ZemzemehiAsErfun.mp3</a><br>
+	<a href="Downloads/LOB-II/LOB-II_03-Song-NareyehEshghe.mp3">03-Song-NareyehEshghe.mp3</a><br>
+	<a href="Downloads/LOB-II/LOB-II_04-Prayer.mp3">04-Prayer.mp3</a><br>
+	<a href="Downloads/LOB-II/LOB-II_05-Song-BastehBaTostAhdVaPeymanam.mp3">05-Song-BastehBaTostAhdVaPeymanam.mp3</a><br>
+	<a href="Downloads/LOB-II/LOB-II_06-Song-Zamaneh.mp3">06-Song-Zamaneh.mp3</a><br>
+	<a href="Downloads/LOB-II/LOB-II_07-SantoorSolo.mp3">07-SantoorSolo.mp3</a><br>
+	<a href="Downloads/LOB-II/LOB-II_08-HiddenWordsPersian28.mp3">08-HiddenWordsPersian28.mp3</a>&nbsp;&nbsp; <a href="Baha'i/Baha/HiddenWords.html#persian28"><b>(View)</b></a><br>
+	<a href="Downloads/LOB-II/LOB-II_09-Prayer.mp3">09-Prayer.mp3</a><br>
+	<a href="Downloads/LOB-II/LOB-II_10-Prayer.mp3">10-Prayer.mp3</a><br>
+	<a href="Downloads/LOB-II/LOB-II_11-Prayer-BidarSho.mp3">11-Prayer-BidarSho.mp3</a><br>
 	</blockquote></td>
 </tr>
 </table>
@@ -76,10 +103,16 @@ Right click on each file and download to your computer.<br>
 <br>
 
 <center><h3><b>Miscellaneous</b></h3><p></center>
-<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsUnlZa240a0Frc1U/edit?usp=sharing">Arabic Dream Tablet</a>, as read by Nina Vazin<p>
+
+<!--<a href="https://drive.google.com/file/d/0B6cYw5IwKTYsUnlZa240a0Frc1U/edit?usp=sharing">Arabic Dream Tablet</a>, as read by Nina Vazin<p>
 <a href="https://drive.google.com/file/d/0B6cYw5IwKTYscWhBOUgxcWE2cm8/edit?usp=sharing">Arabic/Persian Titles of Baha'u'llah</a>, as read by Nina Vazin&nbsp;&nbsp; <b>(<a href="CLUI/UnifiedIndex.html#Bahá'u'lláhTitlesandNames">CLUI</a>)</b><p>
 <a href="https://drive.google.com/file/d/0B6cYw5IwKTYsV2Mxd09QUENYYTQ/edit?usp=sharing">Arabic Chant of Prayer "Blessed Is The Spot"</a><a name="ArabicPrayer-BlessedIsTheSpot"></a>&nbsp;&nbsp; <b>(<i>Revelation Of Baha'u'llah</i>, <a href="Baha'i/Others/ROB/V4/p315-328Ch21.html#p316">vol.4 p.316</a>)</b><p>
-</center>
+-->
+
+<a href="Downloads/Arabic-DreamTablet-NinaVazin.mp3">Arabic Dream Tablet</a>, as read by Nina Vazin<p>
+<a href="Downloads/Arabic-TitlesOfBaha'u'llah-NinaVazin.mp3">Arabic/Persian Titles of Baha'u'llah</a>, as read by Nina Vazin&nbsp;&nbsp; <b>(<a href="CLUI/UnifiedIndex.html#Bahá'u'lláhTitlesandNames">CLUI</a>)</b><p>
+<a href="Downloads/Arabic-BlessedIsTheSpot.mp3">Arabic Chant of Prayer "Blessed Is The Spot"</a><a name="ArabicPrayer-BlessedIsTheSpot"></a>&nbsp;&nbsp; <b>(<i>Revelation Of Baha'u'llah</i>, <a href="Baha'i/Others/ROB/V4/p315-328Ch21.html#p316">vol.4 p.316</a>)</b><p>
+<a href="Downloads/Persian-ChantOfPrayerByShoghiEffendi.mp3">Persian Chant of Prayer by Shoghi Effendi</a> (Closing prayer from Amatu'l-Bahá Rúhíyyih Khánum talk in Pasadena, CA 1980's)</b><p>
 
 
 <table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
