--- a/download.html
+++ b/download.html
@@ -19,7 +19,7 @@
 
 <hr>
 <center><h2><font color="#1e68fe">Audio</font></h2></center>
-The following albums of Persian prayers and Bahá'i songs by Mrs. Goli Ataii are MP3 encoded files.<p>
+The following albums of Persian prayers and Bahá'i songs by <a href="https://www.youtube.com/results?search_query=Goli+Ataii">Mrs. Goli Ataii</a> are MP3 encoded files.<p>
 Right click on each file and download to your computer.<br>
 
 <br><br>
