--- a/Baha'i/UHJ/Messages/Baha'iDatesCalendar.htm
+++ b/Baha'i/UHJ/Messages/Baha'iDatesCalendar.htm
@@ -96,28 +96,10 @@ The Bahá'í day ends and a new one begins at sunset; consequently, the day on w
 </tr>
 </thead>
 
+<tbody>
 
 
 
-
-<tr>
-       <td align="center">181-182</td>	  
-       <td align="center">2025</td>
-
-       <td align="center">25–28 Feb</td><!--Ayyám-i-Há-->
-       <td align="center">1-19 Mar</td><!--Fast-->
-       <td align="center">20 Mar</td><!--Naw-Rúz-->
-       <td align="center">20 April</td><!--First Day of Ridván-->
-       <td align="center">28 April</td><!--Ninth Day of Ridván-->
-       <td align="center">1 May</td><!--Twelfth Day of Ridván-->
-       <td align="center">23 May</td><!--Declaration of the Báb-->
-       <td align="center">28 May</td><!--Ascension of Bahá'u'lláh-->
-       <td align="center">9 July</td><!--Martyrdom of the Báb-->
-       <td align="center">22 Oct</td><!--The Birth of the Báb-->
-       <td align="center">23 Oct</td><!--The Birth of Bahá'u'lláh-->
-       <td align="center">25 Nov</td><!--Day ofthe Covenant-->
-       <td align="center">27 Nov</td><!--Ascension of 'Abdu'l-Bahá-->  
-</tr>
 <tr>
        <td align="center">182-183</td>	  
        <td align="center">2026</td>
@@ -821,7 +803,7 @@ The Bahá'í day ends and a new one begins at sunset; consequently, the day on w
        <td align="center">25 Nov</td><!--Day ofthe Covenant-->
        <td align="center">27 Nov</td><!--Ascension of 'Abdu'l-Bahá-->     
 </tr>
-
+</tbody>
 </table>
 </div>
 <br>
